# chip

./: .gitignore  README.md  chip_face.py  chip_state.txt  credentials.json  hey_chip_ww.ppn  last_session.txt  personality.txt  pyproject.toml  start.sh
chip/: audio_engine.py  config.py  context_manager.py  main.py  services.py  web_search_server.py
chip/audio/: audio_engine.py
chip/core/: context_manager.py  main.py  mcp_connect.py  routines.py  services.py  state.py
chip/servers/: terminal_server.py  youtube_music_applescript_server.py  youtube_music_server.py
chip/utils/: config.py  history.py  schema.py  tools_handler.py
data/: chip_state.json  last_session.txt  personality.txt
jarvis/: audio_engine.py  config.py  main.py  services.py  state.py  terminal_server.py  tools_handler.py
